--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Manual additions
+*.swp
+tmp.py
 # Created by https://www.toptal.com/developers/gitignore/api/python,c++,meson,visualstudiocode,macos,windows,linux,cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,c++,meson,visualstudiocode,macos,windows,linux,cmake
 
@@ -74,7 +77,8 @@ _deps
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
