MAINT: Update ignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Manual additions
 *.swp
 tmp.py
+.vscode/settings.json
+subprojects/*.wrap
 # Created by https://www.toptal.com/developers/gitignore/api/python,c++,meson,visualstudiocode,macos,windows,linux,cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,c++,meson,visualstudiocode,macos,windows,linux,cmake
 
