--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -12,12 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install Conda environment from environment.yml
-        uses: mamba-org/provision-with-micromamba@main
+      - uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: environment.yml
 
       - name: Build pyseams
         shell: bash -l {0}
         run: |
+          micromamba activate pyseamsdev
           meson setup bbdir
           meson compile -C bbdir
 
