BLD: Add a testing group, use pdm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
 
+[project.optional-dependencies]
+testing = [
+    "pytest>=8.3.1",
+    "approvaltests>=14.0.0",
+    "pytest-approvaltests>=0.2.4",
+]
 [build-system]
 # These are all that are seen by pip install .
 requires = ["pybind11", "meson-python", "numpy"]
@@ -32,3 +38,5 @@ install = ['--skip-subprojects']
 # Include so auditwheel on the CI can correctly generate wheels
 # See: https://github.com/ERGO-Code/HiGHS/pull/1343/files
 dist = ['--include-subprojects']
+
+[tool.pdm]
