--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ testing = [
     "approvaltests>=14.0.0",
     "pytest-approvaltests>=0.2.4",
 ]
+adapters = [
+    "ase>=3.23.0",
+]
 [build-system]
 # These are all that are seen by pip install .
 requires = ["pybind11", "meson-python", "numpy"]
