MAINT: Try to pass CI

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -32,4 +32,5 @@ jobs:
         shell: bash -l {0}
         run: |
           meson install -C bbdir --destdir $CONDA_PREFIX
+          pip install pytest approvaltests pytest-approvaltests "ase>=3.23.0"
           python -m pytest
