--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -16,14 +16,14 @@ jobs:
         with:
           environment-file: environment.yml
 
-      - name: Build pyseams
+      - name: Build pyseams (dev)
         shell: bash -l {0}
         run: |
           micromamba activate pyseamsdev
           meson setup bbdir
           meson compile -C bbdir
 
-      - name: Run an import test
+      - name: Run an import test (dev)
         shell: bash -l {0}
         run: |
           python -c 'import bbdir.cyoda'
@@ -31,6 +31,5 @@ jobs:
       - name: Run standard tests
         shell: bash -l {0}
         run: |
-          meson install -C bbdir --destdir $CONDA_PREFIX
-          pip install pytest approvaltests pytest-approvaltests "ase>=3.23.0"
+          pip install .[testing,adapters]
           python -m pytest
