--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -12,7 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-24.04, windows-2022, macos-13, macos-14]
+        # TODO(ruhila): Fix windows-2022, see gh-14
+        os: [ubuntu-24.04, macos-13, macos-14]
     steps:
       - uses: actions/checkout@v3
 
