CI: Add a pre-commit runner

--- a/environment.yml
+++ b/environment.yml
@@ -20,3 +20,11 @@ dependencies:
   # Python
   - pdm
   - pybind11
+  # Python helpers
+  - pipx # conda-lock pdm towncrier
+  - pre-commit
+  # Lint, handled by pre-commit
+  - cppcheck
+  - cpplint
+  - clang-format
+  - ruff
