--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -37,4 +37,4 @@ jobs:
         shell: bash -l {0}
         run: |
           pip install -v .[testing,adapters]
-          python -m pytest
+          python -m pytest -vvv  --approvaltests-add-reporter='PythonNativeReporter'
