MAINT: Address review
Link wrangling, and environment names

--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
 # To use:
 #
 #   $ mamba env create -f environment.yml
-#   $ mamba activate PydSEAMSlibdev
+#   $ mamba activate pyseamsdev
 #
-name: PydSEAMSlibdev
+name: pyseamsdev
 channels:
   - conda-forge
 dependencies:
