--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -45,13 +45,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     env: # Needed for C++17 support on MacOS, see https://cibuildwheel.pypa.io/en/stable/cpp_standards/
       MACOSX_DEPLOYMENT_TARGET: '10.14'
+      CIBW_BEFORE_BUILD: "scripts/cibw_before_build.sh"
     strategy:
       # Ensure that a wheel builder finishes even if another fails
       fail-fast: false
       matrix:
         # macos-13 is an intel runner, macos-14 is apple silicon
-        # TODO(ruhila) : windows-2022
-        os: [ubuntu-24.04, windows-2022, macos-13, macos-14]
+        # TODO(ruhila) : windows-2022, macos-13, macos-14
+        os: [ubuntu-24.04]
 
     steps:
       - uses: actions/checkout@v4
@@ -78,6 +79,7 @@ jobs:
       - name: Build sdist
         shell: bash -l {0}
         run: |
+          pipx run meson wrap install eigen3
           pipx run build --sdist
 
       - uses: actions/upload-artifact@v3
