--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -25,6 +25,8 @@ jobs:
         shell: bash -l {0}
         run: |
           micromamba activate pyseamsdev
+          meson wrap install fmt
+          meson wrap install eigen
           meson setup bbdir
           meson compile -C bbdir
 
