--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -45,7 +45,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env: # Needed for C++17 support on MacOS, see https://cibuildwheel.pypa.io/en/stable/cpp_standards/
       MACOSX_DEPLOYMENT_TARGET: '10.14'
-      CIBW_BEFORE_BUILD: "scripts/cibw_before_build.sh"
+      CIBW_BEFORE_ALL: "scripts/cibw_before_build.sh"
     strategy:
       # Ensure that a wheel builder finishes even if another fails
       fail-fast: false
@@ -79,7 +79,6 @@ jobs:
       - name: Build sdist
         shell: bash -l {0}
         run: |
-          pipx run meson wrap install eigen3
           pipx run build --sdist
 
       - uses: actions/upload-artifact@v3
