--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -51,8 +51,8 @@ jobs:
       fail-fast: false
       matrix:
         # macos-13 is an intel runner, macos-14 is apple silicon
-        # TODO(ruhila) : windows-2022, macos-13, macos-14
-        os: [ubuntu-24.04]
+        # TODO(ruhila) : windows-2022
+        os: [ubuntu-24.04, macos-13, macos-14]
 
     steps:
       - uses: actions/checkout@v4
