--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -43,8 +43,8 @@ jobs:
       github.event_name == 'workflow_dispatch' ||
       (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && ( ! endsWith(github.ref, 'dev0')))
     runs-on: ${{ matrix.os }}
-    env: # Needed for C++17 support on MacOS, see https://cibuildwheel.pypa.io/en/stable/cpp_standards/
-      MACOSX_DEPLOYMENT_TARGET: '10.14'
+    env: # Boost needs 13.0
+      MACOSX_DEPLOYMENT_TARGET: '13.0'
       CIBW_BEFORE_ALL: "scripts/cibw_before_build.sh"
     strategy:
       # Ensure that a wheel builder finishes even if another fails
