CI: Bring back dev import test [wheel build]

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -28,6 +28,12 @@ jobs:
           meson setup bbdir
           meson compile -C bbdir
 
+      - name: Run an import test (dev)
+        shell: bash -l {0}
+        run: |
+          python -c 'import bbdir.cyoda'
+
+
       - name: Run standard tests
         shell: bash -l {0}
         run: |
