--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -51,15 +51,24 @@ jobs:
       fail-fast: false
       matrix:
         # macos-13 is an intel runner, macos-14 is apple silicon
-        # TODO(ruhila) : windows-2022
-        os: [ubuntu-24.04, macos-13, macos-14]
+        # TMP: ubuntu-24.04, macos-13, macos-14,
+        os: [windows-2022]
 
     steps:
       - uses: actions/checkout@v4
+      # From https://github.com/pypa/cibuildwheel/discussions/989
+      - name: Install boost
+        if: ${{ runner.os == 'Windows' }}
+        uses: MarkusJx/install-boost@v2.4.5
+        id: install-boost
+        with:
+          boost_version: 1.83.0
       - name: Echo build platform
         run: echo Building wheels for ${{ matrix.os }}
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.20.0
+        env:
+          CIBW_ENVIRONMENT_WINDOWS: BOOST_ROOT='${{ steps.install-boost.outputs.BOOST_ROOT }}'
       - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
