--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -45,7 +45,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env: # Boost needs 13.0
       MACOSX_DEPLOYMENT_TARGET: '13.0'
-      CIBW_BEFORE_ALL: "scripts/cibw_before_build.sh"
+      # CIBW_BEFORE_ALL: "scripts/cibw_before_build.sh"
     strategy:
       # Ensure that a wheel builder finishes even if another fails
       fail-fast: false
