CI: Disable windows for now [wheel build]
Has linking issues...

2024-08-26T19:48:08.5905297Z   "c++"  -o cyoda.cp310-win_amd64.pyd cyoda.cp310-win_amd64.pyd.p/pyb11_srcs_py_one.cc.obj "-Wl,--allow-shlib-undefined" "-Wl,-O1" "-shared" "-Wl,--start-group" "-Wl,--out-implib=cyoda.cp310-win_amd64.dll.a" "subprojects/seams-core/libyodaLib.a" "subprojects/fmt-11.0.1/libfmt.a" "subprojects/yaml-cpp/libyaml_cpp.a" "-lm" "-lstdc++" "D:/a/PydSEAMSlib/PydSEAMSlib/boost/boost/lib/libboost_filesystem-vc143-mt-x64-1_83.lib" "D:/a/PydSEAMSlib/PydSEAMSlib/boost/boost/lib/libboost_system-vc143-mt-x64-1_83.lib" "C:\Users\runneradmin\AppData\Local\pypa\cibuildwheel\Cache\nuget-cpython\python.3.10.11\tools\python310.dll" "-lstdc++" "-lstdc++" "-lkernel32" "-luser32" "-lgdi32" "-lwinspool" "-lshell32" "-lole32" "-loleaut32" "-luuid" "-lcomdlg32" "-ladvapi32" "-Wl,--end-group"
2024-08-26T19:48:08.5907178Z   C:/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/12.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: subprojects/seams-core/libyodaLib.a(src_seams_output.cpp.obj):seams_output.c:(.text+0x4cfe): undefined reference to `boost::filesystem::detail::path_traits::convert(char const*, char const*, std::__cxx11::basic_string<wchar_t, std::char_traits<wchar_t>, std::allocator<wchar_t> >&, std::codecvt<wchar_t, char, _Mbstatet> const*)'
2024-08-26T19:48:08.5909012Z   C:/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/12.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: subprojects/seams-core/libyodaLib.a(src_seams_output.cpp.obj):seams_output.c:(.text+0x54a1): undefined reference to `boost::filesystem::detail::path_traits::convert(char const*, char const*, std::__cxx11::basic_string<wchar_t, std::char_traits<wchar_t>, std::allocator<wchar_t> >&, std::codecvt<wchar_t, char, _Mbstatet> const*)'
2024-08-26T19:48:08.5910847Z   C:/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/12.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: subprojects/seams-core/libyodaLib.a(src_seams_output.cpp.obj):seams_output.c:(.text+0x54f7): 

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -52,7 +52,8 @@ jobs:
       fail-fast: false
       matrix:
         # macos-13 is an intel runner, macos-14 is apple silicon
-        os: [ubuntu-24.04, macos-13, macos-14, windows-2022]
+        # TODO: windows-2022
+        os: [ubuntu-24.04, macos-13, macos-14]
 
     steps:
       - uses: actions/checkout@v4
